# Financial-Data-Management-Program

./: README.md  pyproject.toml
docs/: PRIVATE_IMPLEMENTATIONS.md  REDACTION_POLICY.md
sample_data/: ap_january.csv  ar_januarycsv  bank_january.csv  combined.csv  company_a.csv  company_b.csv
src/finmerge/: adapters_csv.py  adapters_excel_stub.py  cli.py  combiners.py  interfaces.py  mappers.py  pipeline.py  sample code.py  sinks.py
tests/: conftest.py  test_core.py  test_invariants.py  test_io.py  test_pipeline.py  tests_cli.py
