[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finmerge"
version = "0.1.0"
description = "Redaction-safe sample: combine Excel/CSV financial data via public interfaces."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
